<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#302F31"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#00FFFFFF"
        android:gravity="end"
        android:maxLength="15"
        android:padding="8dp"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Row 1 -->
        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onClearClick"
            android:text="@string/c"
            android:textColor="#C0CA33"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onOperatorClick"
            android:text="@string/div"
            android:textColor="#FB8C00"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onOperatorClick"
            android:text="@string/mult"
            android:textColor="#FB8C00"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onDeleteClick"
            android:text="@string/del"
            android:textColor="#E53935"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Row 2 -->
        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onNumberClick"
            android:text="@string/_7"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onNumberClick"
            android:text="@string/_8"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onNumberClick"
            android:text="@string/_9"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onOperatorClick"
            android:text="@string/sub"
            android:textColor="#FB8C00"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Row 3 -->
        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onNumberClick"
            android:text="@string/_4"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onNumberClick"
            android:text="@string/_5"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onNumberClick"
            android:text="@string/_6"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onOperatorClick"
            android:text="@string/plus"
            android:textColor="#FB8C00"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Row 4 -->
        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onNumberClick"
            android:text="@string/_1"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onNumberClick"
            android:text="@string/_2"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onNumberClick"
            android:text="@string/_3"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onEqualsClick"
            android:text="@string/eql"
            android:textColor="#43A047"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Row 5 -->
        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onNumberClick"
            android:text="@string/zero"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="false"
            android:onClick="onDotClick"
            android:text="@string/dec"
            android:textSize="24sp"
            android:textStyle="bold" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
